manifests/grafana/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
  labels:
    component: web
spec:
  replicas: 3
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      labels:
        component: web
    spec:
      containers:
        - name: grafana
          image: docker.io/grafana/grafana:8.0.3
          ports:
            - name: web
              containerPort: 3000
