manifests/grafana/postgres_deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana-postgres-deployment
  labels:
    app: grafana-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana-postgres
  template:
    metadata:
      labels:
        app: grafana-postgres
    spec:
      containers:
        - name: grafana-postgres
          image: docker.io/postgres:13
          ports:
            - name: postgres
              containerPort: 5432
