manifests/grafana/redis_deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana-redis-deployment
  labels:
    app: grafana-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana-redis
  template:
    metadata:
      labels:
        app: grafana-redis
    spec:
      containers:
        - name: grafana-redis
          image: docker.io/redis:6.2-alpine
          ports:
            - name: redis
              containerPort: 6379
