manifests/grafana/grafana_service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
spec:
  selector:
    app: grafana
  ports:
    - name: web
      port: 80
      targetPort: web
