manifests/grafana/postgres_service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: grafana-postgres-service
spec:
  selector:
    app: grafana-postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: postgres
