manifests/grafana/redis_service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
spec:
  selector:
    app: redis
  ports:
    - name: redis
      port: 6379
      targetPort: redis
