manifests/grafana/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  selector:
    component: web
  ports:
    - name: web
      port: 80
      targetPort: web
