manifests/grafana/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
spec:
  rules:
    - host: 'grafana.localhost'
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: grafana-service
                port:
                  name: web
